Return an ImmutableSet from #getFaces